Use modern project layout and CI conf

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,27 @@
 [tox]
-envlist = tests
+envlist = py, check_codestyle, check_types
 
-[testenv:tests]
-deps =
-    matrix-synapse>=1.39.0
-    aiounittest>=1.4.0
+# required for PEP 517 (pyproject.toml-style) builds
+isolated_build = true
+
+[testenv:py]
+
+extras = dev
 
 commands =
-    python -m unittest discover
+  python -m twisted.trial tests
+
+[testenv:check_codestyle]
+
+extras = dev
+
+commands =
+  - black --check --diff room_access_rules tests
+  - ruff --diff room_access_rules tests
+
+[testenv:check_types]
+
+extras = dev
+
+commands =
+  mypy room_access_rules tests
