--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ extras = dev
 
 commands =
   - black --check --diff room_access_rules tests
-  - ruff --diff room_access_rules tests
+  - ruff check --diff room_access_rules tests
 
 [testenv:check_types]
 
